[package]
name = "encryption"
version = "0.1.0"
authors = ["Mister7F <mister7f@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.83"
rust-crypto-wasm = "0.3.1"
chacha20poly1305 = "0.10.1"
flate2 = "1.0.25"
rand = "0.8.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
